# robo4kids

./: .gitignore  README.md
resources/templates/: cloud9-public-key.pem  robo4kids-cf-template.yaml  stack-cloud9.yaml
robo4kids-documentation/: README.md
robo4kids-robomaker/jetbot/: roboMakerSettings.json
robo4kids-robomaker/jetbot/assets/teleop/: awscreds.js
robo4kids-robomaker/jetbot/simulation_ws/src/aws-robomaker-small-house-world/launch/: small_house.launch
robo4kids-robomaker/jetbot/simulation_ws/src/aws-robomaker-small-house-world/worlds/: maze_world.world
robo4kids-robomaker/jetbot/simulation_ws/src/jetbot_description/: CMakeLists.txt  package.xml
robo4kids-robomaker/jetbot/simulation_ws/src/jetbot_description/launch/: gazebo.launch
robo4kids-robomaker/jetbot/simulation_ws/src/jetbot_description/urdf/: jetbot.urdf
robo4kids-robomaker/jetbot/simulation_ws/src/jetbot_sim_app/: CMakeLists.txt  package.xml
robo4kids-robomaker/jetbot/simulation_ws/src/jetbot_sim_app/launch/: circle.launch  teleop.launch
robo4kids-robomaker/jetbot/simulation_ws/src/jetbot_sim_app/nodes/: notifier  object_detector  teleop.py  teleop_small_house.py
robo4kids-robomaker/react-ui/src/: aws-exports.js
robo4kids-robomaker/roboblockly/: .eslintcache  .gitignore  package-lock.json
robo4kids-robomaker/roboblockly/amplify-backup/: team-provider-info.json
robo4kids-robomaker/roboblockly/amplify-backup/.config/: project-config.json
robo4kids-robomaker/roboblockly/amplify-backup/backend/: backend-config.json
robo4kids-robomaker/roboblockly/amplify-backup/backend/auth/roboblockly5cce0dca/: parameters.json  roboblockly5cce0dca-cloudformation-template.yml
robo4kids-robomaker/roboblockly/src/: App.css  App.js  App_test.js
robo4kids-robomaker/roboblockly/src/components/: Generic_lvl.js  iotConnection.js  runCode.js
robo4kids-robomaker/roboblockly/src/components/customBlocks/: direction_factory.js
robo4kids-robomaker/roboblockly/src/components/levels/: level0.js  level1.js  level1_instructions.js  level2.js  level2_instructions.js  level3.js  main_instructions.js
