<package format="2">
  <name>jetbot_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for JetBot</p>
    <p>This package contains configuration data, 3D models and launch files for JetBot robot</p>
  </description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>MIT-0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>ros_control</depend>
  <depend>ros_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_controller</depend>
  <depend>geometry_msgs</depend>
  <depend>hector_gazebo_plugins</depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  
  <!-- Support camera operations -->
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>
  
  <export>
    <architecture_independent />
  </export>
</package>
