<?xml version="1.0"?>
<package format="2">
  <name>jetbot_sim_app</name>
  <version>1.0.0</version>
  <description>
    A custom AWS RoboMaker simulation package with a JetBot in an empty Gazebo world.
  </description>
  <license>MIT</license>
  <author email="aws-robomaker@amazon.com">AWS RoboMaker</author>
  <maintainer email="aws-robomaker@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_control</depend>
  <depend>xacro</depend>
  <depend>awsiotpythonsdk-pip</depend>
  <depend>jetbot_description</depend>
  <depend>python-boto3-pip</depend>
  <depend>aws-iot-sdk-python</depend>
  <depend>adafruit-motorhat-pip</depend>
  <depend>adafruit-ssd1306-pip</depend>
  <depend>sparkfun-qwiic-scmd-pip</depend>
  <depend>smbus</depend>
  <depend>hector_gazebo_plugins</depend>
  <exec_depend>gazebo</exec_depend>
</package>
